--- a/client/src/app/assets/styles/app.css
+++ b/client/src/app/assets/styles/app.css
@@ -7,7 +7,7 @@
     @apply h-full w-full grid grid-cols-main-3 grid-rows-main-2 bg-[#f0f2f5]
   }
 
-  .main-header {
+  .header {
     @apply col-start-1 col-end-4
   }
 
@@ -18,16 +18,16 @@
   .navbar__start {
     @apply w-80 py-2 px-4 flex gap-2
   }
-  .navbar__icon {
+  .navbar__start-icon {
     @apply h-10 w-10 fill-primary
   }
-  .navbar__search {
+  .navbar__start-search {
     @apply h-10 flex grow items-center gap-2 px-3 bg-[#f0f2f5] rounded-full 
   }
-  .navbar__search-icon {
+  .navbar__start-search-icon {
     @apply h-4 fill-[#65676B]
   }
-  .navbar__search-input {
+  .navbar__start-search-input {
     @apply bg-transparent text-[15px] pb-[2px] border-none focus:outline-none /* #65676B */
   }
   .navbar__items {
@@ -37,7 +37,7 @@
     @apply mx-[2px] my-1 grow flex items-center justify-center rounded-lg hover:bg-[#f0f2f5] relative hover:cursor-pointer
   }
   .navbar__items li.active {
-    @apply hover:bg-white after:w-full after:h-[3px] after:content-[''] after:absolute after:-bottom-1 after:bg-primary
+    @apply hover:bg-white after:w-full after:h-[3px] after:absolute after:-bottom-1 after:bg-primary
   }
   .navbar__items li svg {
     @apply h-6 w-6 fill-[#65676B]
@@ -45,16 +45,16 @@
   .navbar__items li.active svg {
     @apply fill-primary
   }
-  .navbar__buttons {
+  .navbar__actions {
     @apply w-80 flex justify-end gap-2 py-2 px-4
   }
-  .navbar__buttons button {
+  .navbar__actions button {
     @apply h-10 w-10 flex bg-[#E4E6EB] hover:bg-[#DADDE1] rounded-full overflow-hidden
   }
-  .navbar__buttons button:hover img{
+  .navbar__actions button:hover img{
     @apply filter brightness-95
   }
-  .navbar__buttons svg{
+  .navbar__actions svg{
     @apply h-5 w-5 m-auto
   }
 
@@ -70,14 +70,10 @@
   .sidebar__profile-picture,
   .sidebar__item-img,
   .sidebar__button-icon {
-    @apply h-full aspect-square
-  }
-  .sidebar__profile-picture,
-  .sidebar__button-icon {
-    @apply rounded-full
+    @apply h-full aspect-square rounded-full
   }
   .sidebar__item-img {
-    @apply object-none
+    @apply object-none rounded-none
   }
   .sidebar__button-icon {
     @apply bg-[#E4E6EB] p-2
@@ -88,8 +84,6 @@
   .sidebar__button[open] .sidebar__button-icon {
     @apply rotate-180
   }
-
-  
   .sidebar__hr {
     @apply m-2 px-2 border-[#CED0D4]
   }
