--- a/client/src/app/assets/styles/app.css
+++ b/client/src/app/assets/styles/app.css
@@ -129,11 +129,11 @@
 
 
   .story-view {
-    @apply w-full h-[260px] pb-[10px] flex gap-2 overflow-x-auto
+    @apply w-full h-[266px] pb-4 flex gap-2 overflow-x-auto
   }
   .story-button,
   .story-card {
-    @apply w-[140.6px] min-w-[140.6px] h-full flex flex-col items-center bg-white rounded-xl overflow-hidden shadow-story hover:brightness-95
+    @apply w-[140.6px] min-w-[140.6px] h-full flex flex-col items-center bg-white rounded-2xl overflow-hidden shadow-md hover:brightness-95
   }
   .story-button__img {
     @apply h-[202px] object-cover self-start
@@ -167,5 +167,19 @@
   }
   .story-card__img {
     @apply h-full object-cover object-center
+  }
+
+
+  .new-post-card {
+    @apply px-4 py-3 mt-[6px] flex gap-2 bg-white shadow-md rounded-2xl
+  }
+  .new-post-card__profile {
+    @apply rounded-full hover:brightness-95
+  }
+  .new-post-card__input-button {
+    @apply h-10 grow text-[#65676B] text-start px-4 rounded-full bg-[#F0F2F5] hover:bg-[#E4E6E9]
+  }
+  .new-post-card__img-button {
+    @apply h-10 w-10 rounded-full font-symbols text-[#45bd62] text-[24px] bg-[#F0F2F5] hover:bg-[#E4E6E9]
   }
 }
